--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,17 @@
   color: #61dafb;
 }
 
+.app-container {
+  flex-direction: column;
+  height: 100vh;
+  display: flex;
+}
+
+.app-contents-container {
+  flex: 1 1;
+  display: flex;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
